Archive2/2d/a582445822da4d/output
main.cpp:2:79: error: '::main' must return 'int'
 double main( int array1[], double array2[], int array_size1, int array_size_2 )
                                                                               ^
main.cpp:2:8: error: first argument of 'int main(int*, double*, int, int)' should be 'int' [-Wmain]
 double main( int array1[], double array2[], int array_size1, int array_size_2 )
        ^
main.cpp:2:8: error: second argument of 'int main(int*, double*, int, int)' should be 'char **' [-Wmain]
main.cpp:2:8: error: third argument of 'int main(int*, double*, int, int)' should probably be 'char **' [-Wmain]
main.cpp:2:8: error: 'int main(int*, double*, int, int)' takes only zero or two arguments [-Wmain]
